Added another button
I added a study button...

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -111,6 +111,21 @@
            </ul>
           </p>
           </div>
+
+        <button class="accordion"><strong>STUDY BREAK IDEAS</strong></button>
+        <div class="panel">
+          <p>
+            <p>
+              If you have a day of rest or a break from your studies, below are some places you might like to visit and really let go and have fun.
+            </p>
+          <ul>
+            <li><strong>MUSEUMS</strong> - The NATURAL HISTORY, SCIENCE AND VICTORIA AND ALBERT MUSEUMS; are easily some of the best visitor attractions to visit in London, attracting both tourists and locals alike. Go get lost in nature, science and creativity of all kinds.</li>
+            <li><strong>PUBLIC PARKS & GARDENS</strong>- Hyde park, st James park, Regents park, Finsbury park, Kew gardens and Battersea parks, are just some of the amzing green spaces found all over London. Visit with your books, blankets, laptops and a picnic basket. Nothing beats the freshness of air in a park on a spring day. Dress appropriately for the weather and carry an umbrella if you can. You are now in London mate..!</li>
+            <li><strong>WALKS</strong> - London walks are legendary! If you like wandering (and even getting lost deliberately) then you'll enjoy walking along the many awesome paths of London. Meander through parks and gardens, enjoy scenic views and maybe improve your sleep and studies too.</li>
+            <li><strong>TASTE MARKETS</strong> - Visit markets all over town and try out the different dishes and tastes on offer. Discover what makes up the demographic of the cosmopolitan city of London. You will love it and maybe, just maybe, discover a little bit about yourself too while you're at it.</li>
+          </ul>
+          </p>
+        </div>
       </section>
     </main>
 
