--- a/HTML/help.html
+++ b/HTML/help.html
@@ -53,8 +53,9 @@
         
       <div class="help-forums">
       <button class="accordion">
+        <p>...to access Helpful Forums</p>
           <h2>CLICK HERE</h2>
-        <p>...to access Helpful Forums and online Programming Resources</p> </button>
+        <p> & online Programming Resources</p> </button>
       <div class="panel">
         <ul>
           <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
@@ -116,7 +117,7 @@
         <div class="panel">
           <p>
             <p>
-              If you have a day of rest or a break from your studies, below are some places you might like to visit and really let go and have fun.
+              If you have a day of rest or a break from your studies, below are some places you might like to visit to really let go and have fun.
             </p>
           <ul>
             <li><strong>MUSEUMS</strong> - The NATURAL HISTORY, SCIENCE AND VICTORIA AND ALBERT MUSEUMS; are easily some of the best visitor attractions to visit in London, attracting both tourists and locals alike. Go get lost in nature, science and creativity of all kinds.</li>
