--- a/HTML/index.html
+++ b/HTML/index.html
@@ -159,45 +159,67 @@
         const quotes = [
           "Being inspired is awesome. Those moments when you feel all is just right with the world. GREAT. Now go forth and keep conquering…!!!",
           "The difference between ordinary and extraordinary is that little bit …extra.",
-          "Logic will get you from A - B. Imagination will take you everywhere.",
-          "Done is better than perfect.",
+          "Logic will get you from A to B. Imagination will take you everywhere.",
           "Your time is limited, so do not waste it.",
           "Believe you can and you are halfway there.",
           "Only people who are crazy enough to think they can change the world, are the ones who usually do.",
           "The only way to do great work is to love what you do.",
           "If you want to live a happy life, tie it to a goal, not to people or things.",
+          "Channel your inspiration into your creativity and you will always have a reason to feel inspired.",
+          "You are ONE in a billion. There is only YOU!"
         ];
 
         const quotes2 = [
+          "Done is better than perfect.",
           "Anyone who has never made a mistake has never tried anything new.",
           "Old ways will not open new doors.",
           "Just take it one day at a time.",
           "No one said it was gonna be easy, but it will get better with each day you keep trying.",
-          "Anyone who has never made a mistake has never tried anything new.",
+          "Mistakes are signposts to try something different.",
+          "To ask the right question is already half the solution to a problem.",
+          "Always try to finish what you started.",
+          "Sometimes, a BOLD MOVE is what is required, to push through a block.",
+          "You can't have a rainbow without the rain",
+          "Remember.…it is not done until it ships..!!",
         ];
 
         const quotes3 = [
           "It's okay to be scared. Being scared means you are about to do something really, really brave",
-          "To ask the right question is already half the solution to a problem.",
-          "Always try to finish what you started.",
-          "A successful relationship requires falling in love multiple times but always with the same person- so find your reason to love and fall back in love with it.",
-          "Remember.…it is not done until it ships..!!",
+          "Thinking will not overcome fear but action will.",
+          "Fear is but a state of mind. Control your mind. Control your fears.",
+          "We often fear the things we want the most.",
+          "Do the things that scares you the most and the fear will disappear.",
+          "Never be afraid to sit and think a while on your fears.",
+          "You are stronger than your fears.",
+          "I have never known any distress that an hour's reading did not relieve.",
+          "Remember, on the other side of fear, is FREEDOM.",
+          "Just take it one day at a time.",
         ];
 
         const quotes4 = [
-          "I do not have to be productive to see value in myself.",
-          "Everything will work out perfect for me, and I will watch it unfold.",
-          "I have made it this far, and I will not stop now.",
-          "I am resilient in the face of any challenge.",
-          "I am strong and can overcome any obstacle in my life.",
+          "YOU ARE WORTHY of feeling HAPPY.",
+          "You don't have to be productive to see value in yourself.",
+          "Everything will work out PERFECT for YOU, and you will watch it unfold.",
+          "You have made it this far... don't stop now.",
+          "Be resilient in the face of any challenge.",
+          "You are STRONG. You can OVERCOME any obstacle in your life.",
+          "The littlest move is better than no move. Keep moving. You will get there!",
+          "Rememebr that great work is done only by people who are not afraid to be great",
+          "Crying is not a sign of weakness",
+          "Never suffer in silence. Reach out to someone."
         ];
 
         const quotes5 = [
-          "I create my happiness by accepting every part of myself.",
-          "Following my joy reveals the path to my best life.",
-          "I have the power to shape my ideal reality.",
-          "I am worthy of feeling happy.",
-          "I am in charge of my energy, and I am the only one who chooses how I feel.",
+          "To increase your happiness, make others happy.",
+          "Happiness is Thankfulness.",
+          "You create happiness by accepting every part of yourself.",
+          "Following your joy reveals the path to your best life.",
+          "YOU have the POWER to shape your reality.",
+          "YOU ARE WORTHY of feeling happy.",
+          "You are in charge of your energy, and you are the only one who can choose how you feel.",
+          "May the little things of life, let you enjoy 'happily ever after' on a daily basis.",
+          "If you want happiness for a lifetime—help someone else.",
+          "Happiness lies in the joy of achievement, in the thrill of creative effort."
         ];
 
         function displayQuote() {
