updated the about us and aim  write-up

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -104,7 +104,7 @@ We will also add links to sites and resources that we have found helpful during 
 Our project will also use colours - like a colour therapy board - to enhance moods and help users better identify appropriate help sections.
       like this example shown….. -->
 
-          Our aim with this project was to tackle feelings associated with studying as well as life in general. We wanted to create affirmations for students to help them improve or enhance their mood, based on how they are feeling in a particular moment. 
+          Our aim with this project was to tackle feelings associated with studying, as well as life in general. We wanted to create affirmations for students to help them improve or enhance their mood, based on how they are feeling in a particular moment. 
           Whatever your mood, we have tried to provide some quotes that we hope will uplift you and
           encourage you to be positive and resillient.
         </p>
