--- a/HTML/index.html
+++ b/HTML/index.html
@@ -50,7 +50,7 @@
 
       <section class="emotion-buttons">
         <button onclick="displayQuote3()" class="round-button" id="scared">
-          <span class="emotion-word">SCARED</span>
+          <!-- <span class="emotion-word">SCARED</span> -->
           <br />
           <picture>
             <source
@@ -67,11 +67,12 @@
               height="34"
             />
           </picture>
+          <span class="emotion-word">SCARED</span>
         </button>
         <p id="quote3"></p>
 
         <button onclick="displayQuote2()" class="round-button" id="uninspired">
-          <span class="emotion-word">UNINSPIRED</span>
+          <!-- <span class="emotion-word">UNINSPIRED</span> -->
           <br />
           <picture>
             <source
@@ -88,6 +89,7 @@
               height="34"
             />
           </picture>
+          <span class="emotion-word">UNINSPIRED</span>
         </button>
         <p id="quote2"></p>
 
@@ -166,7 +168,7 @@
           "The only way to do great work is to love what you do.",
           "If you want to live a happy life, tie it to a goal, not to people or things.",
           "Channel your inspiration into your creativity and you will always have a reason to feel inspired.",
-          "You are ONE in a billion. There is only YOU!"
+          "You are ONE in a billion. There is only YOU!",
         ];
 
         const quotes2 = [
@@ -206,7 +208,7 @@
           "The littlest move is better than no move. Keep moving. You will get there!",
           "Rememebr that great work is done only by people who are not afraid to be great",
           "Crying is not a sign of weakness",
-          "Never suffer in silence. Reach out to someone."
+          "Never suffer in silence. Reach out to someone.",
         ];
 
         const quotes5 = [
@@ -219,7 +221,7 @@
           "You are in charge of your energy, and you are the only one who can choose how you feel.",
           "May the little things of life, let you enjoy 'happily ever after' on a daily basis.",
           "If you want happiness for a lifetime—help someone else.",
-          "Happiness lies in the joy of achievement, in the thrill of creative effort."
+          "Happiness lies in the joy of achievement, in the thrill of creative effort.",
         ];
 
         function displayQuote() {
@@ -266,15 +268,15 @@
         <section class="social">
           <ul class="name-icon">
             <li><i class="fa-brands fa-instagram"></i></li>
-            <li><a href="instagram.com">Instagram</a></li>
+            <!-- <li><a href="instagram.com">Instagram</a></li> -->
           </ul>
           <ul class="name-icon">
             <li><i class="fa-brands fa-facebook-f"></i></li>
-            <li><a href="facebook.com">Facebook</a></li>
+            <!-- <li><a href="facebook.com">Facebook</a></li> -->
           </ul>
           <ul class="name-icon">
             <li><i class="fa-brands fa-twitter"></i></li>
-            <li><a href="">Twitter</a></li>
+            <!-- <li><a href="">Twitter</a></li> -->
           </ul>
         </section>
       </div>
