--- a/HTML/help.html
+++ b/HTML/help.html
@@ -48,7 +48,7 @@
 
     <main>
       <div id="code-help"> <p>
-        Need help with a coding project or have a question about a programming language or concept...?<h5 style="display: flex; justify-content: center;">ACCESS HELPFULL ONLINE RESOURCES</h5>
+        Need help with a coding project or have a question about a programming language or concept...?<h4 style="display: flex; justify-content: center;">ACCESS HELPFULL ONLINE RESOURCES</h4>
       </p></div>
         
       <div class="help-forums">
@@ -71,8 +71,9 @@
 
       <div id="rules"><p> <i>[Remember to always be respectful and follow the forum's rules and guidelines when posting or asking for help.]</i></p></div>
       <hr />
+
       <section class="tips">
-        <H4><p>CLICK BELOW BUTTONS FOR..</p></H4> <br> <br><p>FOCUS & STRESS RELIEF TIPS FOR STUDENTS! </p>
+        <H4><p>CLICK BELOW BUTTONS TO ACCESS..</p></H4> <br> <p><strong>TOP TIPS FOR STUDENTS!</strong></p>
 
         <button class="accordion"><strong>FOCUS TIPS</strong></button>
           
