--- a/HTML/about.html
+++ b/HTML/about.html
@@ -109,6 +109,15 @@ Our project will also use colours - like a colour therapy board - to enhance moo
           encourage you to be positive and resillient.
         </p>
       </section>
+
+      <section class="info-section">
+        <h2 class="about-method">How It Works</h2>
+        <p>
+          When you pick the board that matches your mood, click through and see all the quotes. Each board has at least 10 quotes that will display randomly. If a quote is displayed more than 2-3 times, we advice you take that as your quote of the day and think on it. Of course moods are fickle, so if you need to, click on any other board that catches your interest and see what advise you receive. Happy clicking..!
+        </p>
+      </section>
+
+
     </main>
 
     <footer>
