--- a/HTML/about.html
+++ b/HTML/about.html
@@ -61,8 +61,9 @@
               class="emoji"
               width="32"
               height="32"
-            /> </picture
-          >About Us
+            />
+          </picture>
+          About Us
           <picture>
             <source
               srcset="
@@ -80,7 +81,9 @@
           </picture>
         </h1>
         <p>
-          This affirmation site is a buddy-group project,  created by students: Abdulmajid, Andriana and Gayle, as part of our course module at Code Your Future (CYF).
+          This affirmation site is a buddy-group project, created by students:
+          Abdulmajid, Andriana and Gayle, as part of our course module at Code
+          Your Future (CYF).
         </p>
       </section>
 
@@ -104,20 +107,30 @@ We will also add links to sites and resources that we have found helpful during 
 Our project will also use colours - like a colour therapy board - to enhance moods and help users better identify appropriate help sections.
       like this example shown….. -->
 
-          Our aim with this project was to tackle feelings associated with studying, as well as life in general. We wanted to create affirmations for students to help them improve or enhance their mood, based on how they are feeling in a particular moment. 
-          Whatever your mood, we have tried to provide some quotes that we hope will uplift you and
+          Our aim with this project was to tackle feelings associated with
+          studying, as well as life in general. We wanted to create affirmations
+          for students to help them improve or enhance their mood, based on how
+          they are feeling in a particular moment. Whatever your mood, we have
+          tried to provide some quotes that we hope will uplift you and
           encourage you to be positive and resillient.
         </p>
       </section>
 
       <section class="info-section">
-        <h2 class="about-method">How It Works</h2>
+        <h2 class="about-title">How It Works</h2>
         <p>
-          When you pick the board that matches your mood, click through and see all the quotes. Each board has at least 10 quotes that will display randomly. If a quote is displayed more than 2-3 times, we advice you take that as your quote of the day and think on it. Of course moods are fickle, so if you need to, click on any other board that catches your interest and see what advise you receive. Happy clicking..!
+          When you pick the board that matches your mood, click through and see
+          all the quotes. Each board has at least 10 quotes that will display
+          randomly. If a quote is displayed more than 2-3 times, we advice you
+          take that as your quote of the day and think on it. Of course moods
+          are fickle, so if you need to, click on any other board that catches
+          your interest and see what advise you receive. Happy clicking..!
         </p>
       </section>
 
-
+      <section class="image-area">
+        <img src="../IMAGE/Soulful.png" alt="" class="image" />
+      </section>
     </main>
 
     <footer>
@@ -132,15 +145,15 @@ Our project will also use colours - like a colour therapy board - to enhance moo
         <section class="social">
           <ul class="name-icon">
             <li><i class="fa-brands fa-instagram"></i></li>
-            <li><a href="instagram.com">Instagram</a></li>
+            <!-- <li><a href="instagram.com">Instagram</a></li> -->
           </ul>
           <ul class="name-icon">
             <li><i class="fa-brands fa-facebook-f"></i></li>
-            <li><a href="facebook.com">Facebook</a></li>
+            <!-- <li><a href="facebook.com">Facebook</a></li> -->
           </ul>
           <ul class="name-icon">
             <li><i class="fa-brands fa-twitter"></i></li>
-            <li><a href="">Twitter</a></li>
+            <!-- <li><a href="">Twitter</a></li> -->
           </ul>
         </section>
       </div>
