--- a/HTML/help.html
+++ b/HTML/help.html
@@ -53,7 +53,7 @@
         
       <div class="help-forums">
       <button class="accordion">
-           <img src="/IMAGE/pointer-images.png" alt="clicking hand image">
+           <img src="../IMAGE/pointer-images.png" alt="clicking hand image">
           <h3>HERE</h3>
         </button>
       <div class="panel">
@@ -142,15 +142,15 @@
         <section class="social">
           <ul class="name-icon">
             <li><i class="fa-brands fa-instagram"></i></li>
-            <li><a href="instagram.com">Instagram</a></li>
+            <!-- <li><a href="instagram.com">Instagram</a></li> -->
           </ul>
           <ul class="name-icon">
             <li><i class="fa-brands fa-facebook-f"></i></li>
-            <li><a href="facebook.com">Facebook</a></li>
+            <!-- <li><a href="facebook.com">Facebook</a></li> -->
           </ul>
           <ul class="name-icon">
             <li><i class="fa-brands fa-twitter"></i></li>
-            <li><a href="">Twitter</a></li>
+            <!-- <li><a href="">Twitter</a></li> -->
           </ul>
         </section>
       </div>
