--- a/HTML/about.html
+++ b/HTML/about.html
@@ -98,21 +98,12 @@
       <section class="info-section">
         <h2 class="about-title">Our Aim</h2>
         <p>
-          <!-- To capture students moods and offer appropriate uplifting or encouraging quotes -->
-          <!-- We want to motivate students by capturing their moods on any particular day and hopefully, offer them some type of encouragement and motivation in form of quotes, to keep on pushing in their studies.
-We will use colours (post research) that will be appropriate to the moods to help stir imagination and provoke thoughts.
-We will also add links to sites and resources that we have found helpful during our own study period too, if possible. -->
-
-          <!-- Our project is a web page that will produce affirmations that will be tailored to people's moods to help lighten their mood/ give them a sense of peace or source of strength.
-Our project will also use colours - like a colour therapy board - to enhance moods and help users better identify appropriate help sections.
-      like this example shown….. -->
-
           Our aim with this project was to tackle feelings associated with
           studying, as well as life in general. We wanted to create affirmations
           for students to help them improve or enhance their mood, based on how
           they are feeling in a particular moment. Whatever your mood, we have
           tried to provide some quotes that we hope will uplift you and
-          encourage you to be positive and resillient.
+          encourage you to be positive and resilient.
         </p>
       </section>
 
