--- a/HTML/about.html
+++ b/HTML/about.html
@@ -96,7 +96,36 @@
       </section>
 
       <section class="info-section">
-        <h2 class="about-title">Our Aim</h2>
+        <h2 class="about-title">
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f31f/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f31f/512.gif"
+              alt="🌟"
+              width="32"
+              height="32"
+            /> </picture
+          >Our Aim
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f31f/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f31f/512.gif"
+              alt="🌟"
+              width="32"
+              height="32"
+            />
+          </picture>
+        </h2>
         <p>
           Our aim with this project was to tackle feelings associated with
           studying, as well as life in general. We wanted to create affirmations
@@ -108,7 +137,50 @@
       </section>
 
       <section class="info-section">
-        <h2 class="about-title">How It Works</h2>
+        <h2 class="about-title">
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif"
+              alt="🚀"
+              width="32"
+              height="32"
+            />
+          </picture>
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f331/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f331/512.gif"
+              alt="🌱"
+              width="32"
+              height="32"
+            /> </picture
+          >How It Works
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f680/512.gif"
+              alt="🚀"
+              width="32"
+              height="32"
+            />
+          </picture>
+        </h2>
         <p>
           When you pick the board that matches your mood, click through and see
           all the quotes. Each board has at least 10 quotes that will display
