mouse image update

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -56,7 +56,7 @@
       <section class="help-forums">
         
         <button class="accordion" id="accordion-A">
-            <img src="/IMAGE/mouseclick-img.gif" alt="clicking hand image">
+            <img src="/IMAGE/mousehand.gif" alt="clicking hand image">
             <h3>HERE</h3>
         </button>
 
