playing around with colors

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -104,7 +104,7 @@
         </div>
 
         <button class="accordion" id="accordion-C"> <img src="/IMAGE/chill-chillax.gif">
-          <br><strong>STRESS-RELIEF</strong></button>
+          <br><strong>Practises for <br>STRESS-RELIEF</strong></button>
                 <div class="panel">
                   <p>
                   <ul>
@@ -118,8 +118,8 @@
           </p>
           </div>
 
-        <button class="accordion" id="accordion-D"> <img src="/IMAGE/bikinglondon.gif"><br>
-          <h4><strong>STUDY BREAK</strong></h4>
+        <button class="accordion" id="accordion-D"> <img src="/IMAGE/london_02.gif"><br>
+          <h4><strong>STUDY BREAK <br> IDEAS</strong></h4>
           </button>
         <div class="panel">
           <p>
@@ -129,7 +129,7 @@
           <ul>
             <li><strong>MUSEUMS</strong> - The NATURAL HISTORY, SCIENCE AND VICTORIA AND ALBERT MUSEUMS; are easily some of the best visitor attractions to visit in London, attracting both tourists and locals alike. Go get lost in nature, science and creativity of all kinds.</li>
             <li><strong>PUBLIC PARKS & GARDENS</strong>- Hyde park, st James park, Regents park, Finsbury park, Kew gardens and Battersea parks, are just some of the amzing green spaces found all over London. Visit with your books, blankets, laptops and a picnic basket. Nothing beats the freshness of air in a park on a spring day. Dress appropriately for the weather and carry an umbrella if you can. You are now in London mate..!</li>
-            <li><strong>WALKS</strong> - London walks are legendary! If you like wandering (and even getting lost deliberately) then you'll enjoy walking along the many awesome paths of London. Meander through parks and gardens, enjoy scenic views and maybe improve your sleep and studies too.</li>
+            <li><strong>WALKS AND BIKE RIDES</strong> - London walks and bike rides are legendary! If you like wandering (and even getting lost deliberately) then you'll enjoy walking or riding along the many awesome paths of London. Meander through parks and gardens, enjoy scenic views and maybe improve your sleep and studies too.</li>
             <li><strong>TASTE MARKETS</strong> - Visit markets all over town and try out the different dishes and tastes on offer. Discover what makes up the demographic of the cosmopolitan city of London. You will love it and maybe, just maybe, discover a little bit about yourself too while you're at it.</li>
           </ul>
           </p>
