--- a/HTML/about.html
+++ b/HTML/about.html
@@ -127,13 +127,12 @@
           </picture>
         </h2>
         <p>
-          Our aim with this project was to tackle feelings associated with
+          Our aim with this project is to tackle feelings associated with
           studying, as well as life in general.
         </p>
         <p>
-          We wanted to create affirmations for students to help them improve or
-          enhance their mood, based on how they are feeling in a particular
-          moment.
+          We wanted to create affirmations to help people improve or enhance
+          their mood, based on how they are feeling in a particular moment.
         </p>
         <p>
           Whatever your mood, we have tried to provide some quotes that we hope
@@ -174,7 +173,7 @@
         </h2>
         <p>
           When you pick the board that matches your mood, click through and see
-          all the quotes. Each board has at least 10 quotes that will display
+          all the quotes. Each board cycles through quotes that will display
           randomly. If a quote is displayed more than 2-3 times, we advice you
           take that as your quote of the day and think on it.
         </p>
