--- a/HTML/help.html
+++ b/HTML/help.html
@@ -56,7 +56,7 @@
       <section class="help-forums">
         
         <button class="accordion" id="accordion-A">
-            <img src="/IMAGE/mouseclick-img.gif" alt="clicking hand image">
+            <img src="../IMAGE/mouseclick-img.gif" alt="clicking hand image">
             <h3>HERE</h3>
         </button>
 
@@ -79,7 +79,7 @@
       <section class="tips">
         <H4><p>CLICK BELOW BUTTONS TO ACCESS..</p></H4> <br> <p><strong>TOP TIPS FOR STUDENTS!</strong></p>
 
-        <button class="accordion" id="accordion-B"><img src="/IMAGE/clock-time.png" alt="clock-image">
+        <button class="accordion" id="accordion-B"><img src="../IMAGE/clock-time.png" alt="clock-image">
           <br> <h3><strong>FOCUS TIPS</strong></h3></button>
           
         <div class="panel">
@@ -103,7 +103,7 @@
         </p>
         </div>
 
-        <button class="accordion" id="accordion-C"> <img src="/IMAGE/chill-chillax.gif">
+        <button class="accordion" id="accordion-C"> <img src="../IMAGE/chill-chillax.gif">
           <br><strong>STRESS-RELIEF</strong></button>
                 <div class="panel">
                   <p>
@@ -118,7 +118,7 @@
           </p>
           </div>
 
-        <button class="accordion" id="accordion-D"> <img src="/IMAGE/bikinglondon.gif"><br>
+        <button class="accordion" id="accordion-D"> <img src="../IMAGE/bikinglondon.gif"><br>
           <h4><strong>STUDY BREAK</strong></h4>
           </button>
         <div class="panel">
