Added additional button
Added an additional button and updated the JavaScript file to reflect changes.
Colours changed on buttons to make them more diverse

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -50,13 +50,13 @@
       <section id="code-help">
         <div id="help-paragraf"><p> Need help with a coding project or have a question about a programming language or concept...?</p></div>
 
-        <h4 style="display: flex; justify-content: center;">ACCESS HELPFULL ONLINE RESOURCES</h4>
+        <h4 style="display: flex; justify-content: center;">ACCESS HELPFUL ONLINE RESOURCES</h4>
       </section>
         
       <section class="help-forums">
         
         <button class="accordion" id="accordion-A">
-            <img src="/IMAGE/mousehand.gif" alt="clicking hand image">
+            <img src="../IMAGE/mousehand.gif" alt="clicking hand image">
             <h3>HERE</h3>
         </button>
 
@@ -104,7 +104,7 @@
         </p>
         </div>
 
-        <button class="accordion" id="accordion-C"> <img src="/IMAGE/chill-chillax.gif">
+        <button class="accordion" id="accordion-C"> <img src="../IMAGE/chill-chillax.gif">
           <br><strong>Practises for <br>STRESS-RELIEF</strong></button>
                 <div class="panel">
              <p>
@@ -125,7 +125,7 @@
           </p>
           </div>
 
-        <button class="accordion" id="accordion-D"> <img src="/IMAGE/bikinglondon.gif"><br>
+        <button class="accordion" id="accordion-D"> <img src="../IMAGE/bikinglondon.gif"><br>
           <h4><strong>STUDY BREAK <br> IDEAS</strong></h4>
           </button>
         <div class="panel">
