--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/styles.css" />
-    <script src="../JS/script.js"></script>
+
     <script
       src="https://kit.fontawesome.com/d81457d759.js"
       crossorigin="anonymous"
@@ -154,6 +154,27 @@
           <span class="emotion-word">SAD</span>
         </button>
         <p id="quote4" class="quote"></p>
+
+        <button onclick="displayQuote6()" class="round-button" id="tired">
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/1f625/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f625/512.gif"
+              alt="😥"
+              class="emoji"
+              width="34"
+              height="34"
+            />
+          </picture>
+          <br />
+          <span class="emotion-word">TIRED</span>
+        </button>
+        <p id="quote6" class="quote"></p>
       </section>
     </main>
 
@@ -183,5 +204,7 @@
       </div>
       <p id="copyright">&copy; STAffirmations, Inc.</p>
     </footer>
+
+    <script src="../JS/script.js"></script>
   </body>
 </html>
