--- a/HTML/index.html
+++ b/HTML/index.html
@@ -155,7 +155,11 @@
         </button>
         <p id="quote4" class="quote"></p>
       </section>
-
+      <section class="desktop">
+        <div class = "box">
+        <p id="quote-desktop" class="quote22"></p>
+        </div>
+      </section>
       <script>
         // const quotes1 = [
         //   "Being inspired is awesome. Those moments when you feel all is just right with the world. GREAT. Now go forth and keep conquering…!!!",
